fix: 섹션별 응답